# glazed-dx

./: .gitignore  Cargo.toml  README.md  options.yml
crates/glazed-battle/: Cargo.toml  README.md
crates/glazed-battle/src/: accuracy.rs  constants.rs  core.rs  damage.rs  double.rs  effects.rs  hooks.rs  lib.rs  single.rs  tag.rs  turn.rs
crates/glazed-battle/tests/: integration_tests.rs
crates/glazed-core/: Cargo.toml  README.md
crates/glazed-core/src/: lib.rs  math.rs
crates/glazed-data/: Cargo.toml  README.md
crates/glazed-data/resources/: berry-berrypokeblockdata.yml  movedata.yml  pokemonbattledata.yml
crates/glazed-data/resources/pokemon/: evolutiondata.yml  speciesdata.yml
crates/glazed-data/src/: abilities.rs  attack.rs  constants.rs  contest.rs  core.rs  evolutions.rs  item.rs  lib.rs  locations.rs  lookups.rs  pokemon.rs  species.rs  time.rs  types.rs
crates/glazed-dx/: Cargo.toml  README.md
crates/glazed-dx/assets/: README.md
crates/glazed-dx/assets/locales/en-US/: cutscenes.ftl  pkmn.ftl
crates/glazed-dx/assets/pkmn/: battle.rar
crates/glazed-dx/assets_aseprite/: IntroCliff.aseprite  QuilavaLoop.aseprite
crates/glazed-dx/assets_aseprite/intro/: GlazedDX.aseprite  Mew.aseprite  PressEnter.aseprite
crates/glazed-dx/src/: actions.rs  anim.rs  audio.rs  controls.rs  intro.rs  locale.rs  main.rs  pkmn.rs  player.rs  state.rs  text.rs  util.rs
crates/glazed-dx/src/scenes/: intro.rs  lecture.rs  mod.rs
crates/glazed-macro/: Cargo.toml
crates/glazed-macro/src/: lib.rs
src/: core.rs  main.rs  types.rs
src/data/: abilities.rs  attack.rs  constants.rs  core.rs  evolutions.rs  item.rs  mod.rs  pokemon.rs  types.rs
