[package]
name = "glazed-battle"
version = "0.1.0"
authors = ["Justis <lamanna.justis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
either = "1.6.1"
fraction = "0.9.0"
parking_lot = "0.11.2"
glazed-data = { path = "../glazed-data" }
glazed-core = { path = "../glazed-core" }