[package]
name = "glazed_battle"
version = "0.1.0"
authors = ["Justis <lamanna.justis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
strum = "0.22"
strum_macros = "0.22"
glazed_data = { path = "../glazed-data" }
glazed_core = { path = "../glazed-core" }