[package]
name = "glazed-data"
version = "0.1.0"
authors = ["Justis <lamanna.justis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
strum = "0.22"
strum_macros = "0.22"
lazy_static = "0.1.15"
