[package]
name = "glazed_data"
version = "0.1.0"
authors = ["Justis <lamanna.justis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
strum = "0.22"
strum_macros = "0.22"
resource = "~0.4.0" # Loads data from files at runtime (when debugging) or compile-time (when prod)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8" # Parsing files into appropriate data-structures
lazy_static = "1.4.0" # Holding the parsed data structures
glazed_core = { path = "../glazed-core" }
