[package]
name = "glazed_dx"
version = "0.1.0"
authors = ["Milo Marten <lamanna.justis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[dependencies]
bevy_kira_audio = "0.8.0"
bevy_tweening = "0.3.2"
glazed_core = { path = "../glazed-core" }
glazed_data = { path = "../glazed-data" }
glazed_battle = { path = "../glazed-battle" }