[package]
name = "glazed_dx"
version = "0.1.0"
authors = ["Milo Marten <lamanna.justis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7"
default-features = false
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[dependencies.iyes_progress]
version = "0.3.0"
default-feature = false
features = ["iyes_loopless", "assets"]

[dependencies]
serde = "1.0.137"
serde_yaml = "0.8.23"
unicode-segmentation = "1.9.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

glyph_brush_layout = "0.2.3"
iyes_loopless = "0.5.1"
bevy_kira_audio = "0.9.0"
bevy_tweening = "0.4.0"
leafwing-input-manager = "0.3.0"
bevy-sequential-actions = "0.2.0"

glazed_core = { path = "../glazed-core" }
glazed_data = { path = "../glazed-data" }
glazed_battle = { path = "../glazed-battle" }