[lib]
proc-macro = true

[package]
name = "glazed-macro"
version = "0.1.0"
authors = ["Justis <lamanna.justis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
glazed-core = { path = "../glazed-core" }